asm transition working

--- a/8088/cga/transition/default.config
+++ b/8088/cga/transition/default.config
@@ -13,12 +13,12 @@
 //       that is closest to the mid-point of the transition.
 //   4 = same as 1 but uses midpoints like 3.
 //   5 = same as 2 but uses midpoints like 3.
-//   6 = RGB fade using characters 0xb0, 0xb1, 0x1d, 0x7e and 0x7f.
+//   6 = RGB fade using characters in characterSet.
 //   7 = same as 6 but without gamma correction (uses sRGB cube instead of
 //       linear RGB cube). Possibly decreases banding at the expense of less
 //       accurate colours. Probably not noticably different from 6.
 
-fadeNumber = 7;
+fadeNumber = 6;
 
 // For attribute-only fades (numbers 0-5), this is the number of steps in each
 // half of the transition (e.g. from initial picture to black). One extra step
