hres span border working

--- a/8088/demo/cga/span/hres/hres.vcxproj.filters
+++ b/8088/demo/cga/span/hres/hres.vcxproj.filters
@@ -48,4 +48,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\..\..\..\..\include\alfe.natvis" />
+  </ItemGroup>
 </Project>
