--- a/8088/xtce/gentests/gentests.vcxproj
+++ b/8088/xtce/gentests/gentests.vcxproj
@@ -117,6 +117,9 @@
   <ItemGroup>
     <ClCompile Include="gentests.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\include\alfe\file.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
