--- a/8088/cga/cgaart/default.config
+++ b/8088/cga/cgaart/default.config
@@ -5,7 +5,7 @@ cgaROM = "5788005.u33";
 
 // Resample the input picture to this size before matching. Measured in hdots
 // horizontally and scanlines vertically.
-activeSize.x = inputPicture.size.x*(inputPicture.size.x <= 456 ? 2 : 1);
+activeSize.x = inputPicture.size.x; //*(inputPicture.size.x <= 456 ? 2 : 1);
 activeSize.y = inputPicture.size.y*(inputPicture.size.y <= 262 ? 2 : 1)/2;
 
 
