--- a/8088/xtce/gentests/gentests.vcxproj.filters
+++ b/8088/xtce/gentests/gentests.vcxproj.filters
@@ -24,4 +24,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\..\..\include\alfe.natvis" />
+  </ItemGroup>
 </Project>
