--- a/8088/xtce/gentests/gentests.vcxproj.filters
+++ b/8088/xtce/gentests/gentests.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClInclude Include="..\..\..\include\alfe\file.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\alfe\array.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="..\..\..\include\alfe.natvis" />
