Start of harness and reenigne

--- a/8088/cga/cgaart/mode2.config
+++ b/8088/cga/cgaart/mode2.config
@@ -30,7 +30,7 @@ activeSize.y = inputPicture.size.y*(inputPicture.size.y <= 262 ? 2 : 1)/2;
 // The improper modes latch bytes at incorrect times, so have strange bit
 // patterns and require multiple passes to get optimal results.
 // Use 0x80 for auto -HRES and 0x81 for auto +HRES (tries all combinations).
-mode = 0x1a;
+mode = 0x09;
 
 // Low 4 bits of palette register are
 //   overscan in text mode and 2bpp graphics mode
@@ -42,7 +42,7 @@ mode = 0x1a;
 //   0x20..0x2f = background/cyan/magenta/light grey
 //   0x30..0x3f = background/light cyan/light magenta/white
 // Use 0xff for auto palette (tries all combinations appropriate for mode).
-palette = 0x0f;
+palette = 0x00;
 
 // In graphics modes, only the lowest bit of the scanline counter (CRTC "row
 // address") is used. It is used to select between the two 8kB regions of VRAM,
@@ -51,7 +51,7 @@ palette = 0x0f;
 // text modes, the lowest 3 bits of the scanline counter give the scanline
 // within the character to look up in ROM, so 1 to 8 are useful (9+ give
 // repeated scanlines).
-scanlinesPerRow = 2;
+scanlinesPerRow = 1;
 
 // Number of times to display each scanline. There are various hacks for
 // repeating scanlines, but not all repeat counts are possible in every
@@ -95,15 +95,15 @@ phase = 1;
 // allowing us to do 200 1-scanline rows with no CPU time, or 100
 // duplicated-scanline rows with no CPU time
 // Set 7 has all possible combinations of double-wide pixels on scanline 0.
-characterSet = 3;
+characterSet = 0;
 
 // Quality for matching in text modes. 0 = fastest, 1 = best quality
-quality = 0.5;
+quality = 1;
 
 // Parameters for error diffusion in match mode. This corresponds to diffusing
 // the error at a 45 degree angle with the default aspect ratio, since
 // 0.647565^12 ~= (1-0.647565)^5.
-horizontalDiffusion = 0.647565;
+horizontalDiffusion = 0.618034;
 verticalDiffusion = 1 - horizontalDiffusion;
 temporalDiffusion = 0;
 
@@ -167,13 +167,13 @@ combineScanlines = true;
 // New CGA cards have a lower chroma amplitude and the text mode colours show
 // up as more different shades of grey on a monochrome monitor.
 Boolean isRGBI = bitmapIsRGBI(inputPicture);
-connector = isRGBI ? 0 : 1;
+connector = 0; //isRGBI ? 0 : 1;
 
 
 // NTSC decoding options
 
-contrast = 100;
-brightness = 0;
+contrast = 300;
+brightness = -200;
 saturation = 100;
 hue = 0;
 chromaBandwidth = 1;  // units of colour carrier frequency /8
@@ -190,7 +190,7 @@ lobes = 1.5;
 
 // Scaling and scanline options
 
-aspectRatio = 5/6;  // Pixel aspect ratio of one ldot
+aspectRatio = 1;  // Pixel aspect ratio of one ldot
 scanlineWidth = 1;  // Width of a scanline in units of "zoom" pixels
 overscan = 0.1; // Overscan to add on each edge, as fraction of active size
 
@@ -201,21 +201,21 @@ overscan = 0.1; // Overscan to add on each edge, as fraction of active size
 //   3 = gaussian
 //   4 = sinc
 //   5 = box (nearest neighbour)
-scanlineProfile = 0;
-horizontalProfile = 0;
-prescalerProfile = isRGBI ? 5 : 4;
+scanlineProfile = 5;
+horizontalProfile = 5;
+prescalerProfile = 5;
 // Scanline bleeding settings
 //   0 = none (clipping only, inaccurate colour)
 //   1 = down (fast)
 //   2 = symmetrical (good)
-scanlineBleeding = 2;
-horizontalBleeding = 2;
+scanlineBleeding = 0;
+horizontalBleeding = 0;
 zoom = 2;  // Output pixels per scanline vertically
 horizontalRollOff = 0;
 verticalRollOff = 0;
 horizontalLobes = 4;
 verticalLobes = 4;
-subPixelSeparation = 1; // Positive for RGB, negative for BGR
+subPixelSeparation = 0; // Positive for RGB, negative for BGR
 
 
 // Phosphor colour settings
