--- a/8088/xtserver/sniffer_decode/sniffer_decode.vcxproj
+++ b/8088/xtserver/sniffer_decode/sniffer_decode.vcxproj
@@ -148,6 +148,9 @@
   <ItemGroup>
     <ClCompile Include="sniffer_decode.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\..\..\include\alfe.natvis" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
