--- a/reenigne/reenigne.vcxproj.filters
+++ b/reenigne/reenigne.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="..\include\alfe\statement.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\alfe\type_specifier.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
