More resolving, printing Expressions

--- a/8088/cga/cgaart/cgaart.vcxproj.filters
+++ b/8088/cga/cgaart/cgaart.vcxproj.filters
@@ -149,6 +149,15 @@
     <ClInclude Include="..\..\..\include\alfe\integer_types.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\alfe\statement.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\alfe\type_specifier.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\alfe\parse_tree_object.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="..\..\..\include\alfe.natvis" />
