--- a/8088/cga/cgaart/cgaart.vcxproj
+++ b/8088/cga/cgaart/cgaart.vcxproj
@@ -114,6 +114,7 @@
     <ClInclude Include="..\..\..\include\alfe\main.h" />
     <ClInclude Include="..\..\..\include\alfe\ntsc_decode.h" />
     <ClInclude Include="..\..\..\include\alfe\operator.h" />
+    <ClInclude Include="..\..\..\include\alfe\parse_tree_object.h" />
     <ClInclude Include="..\..\..\include\alfe\rational.h" />
     <ClInclude Include="..\..\..\include\alfe\rational_functions.h" />
     <ClInclude Include="..\..\..\include\alfe\reference.h" />
@@ -122,11 +123,13 @@
     <ClInclude Include="..\..\..\include\alfe\scanlines.h" />
     <ClInclude Include="..\..\..\include\alfe\set.h" />
     <ClInclude Include="..\..\..\include\alfe\space.h" />
+    <ClInclude Include="..\..\..\include\alfe\statement.h" />
     <ClInclude Include="..\..\..\include\alfe\string.h" />
     <ClInclude Include="..\..\..\include\alfe\terminal6.h" />
     <ClInclude Include="..\..\..\include\alfe\thread.h" />
     <ClInclude Include="..\..\..\include\alfe\timer.h" />
     <ClInclude Include="..\..\..\include\alfe\type.h" />
+    <ClInclude Include="..\..\..\include\alfe\type_specifier.h" />
     <ClInclude Include="..\..\..\include\alfe\user.h" />
     <ClInclude Include="..\..\..\include\alfe\vectors.h" />
     <ClInclude Include="..\..\..\include\alfe\wrap.h" />
