Add floor function

--- a/8088/cga/cgaart/sphere1s.config
+++ b/8088/cga/cgaart/sphere1s.config
@@ -6,7 +6,7 @@ cgaROM = "5788005.u33";
 // Resample the input picture to this size before matching. Measured in hdots
 // horizontally and scanlines vertically.
 activeSize.x = inputPicture.size.x;
-activeSize.y = inputPicture.size.y/2;
+activeSize.y = floor(inputPicture.size.y/2);
 
 
 // CGA mode configuration
