Function resolve fixes

--- a/8088/cga/cgaart/sphere1s.config
+++ b/8088/cga/cgaart/sphere1s.config
@@ -111,7 +111,8 @@ temporalDiffusion = 0;
 // not to adjacent (rightward, downward) cells. This may eliminate a "blotchy"
 // effect in RGBI text modes without sacrificing the ability of the matcher to
 // use dither characters.
-diffuseInternally = false;
+diffuseInternallyHorizontal = false;
+diffuseInternallyVertical = false;
 
 // Gamma correction. 0 for sRGB standard, 1 for no gamma correction.
 // Other values (e.g. 2.2) use power approximation.
