--- a/8088/xtserver/xtserver/xtserver.vcxproj
+++ b/8088/xtserver/xtserver/xtserver.vcxproj
@@ -14,12 +14,13 @@
     <ProjectGuid>{0E8EE656-5BDD-4F3B-977F-B8D442820313}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>xtserver</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v110_xp</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
