Start of new Code representation

--- a/8088/cga/cgaart/cgaart.vcxproj.filters
+++ b/8088/cga/cgaart/cgaart.vcxproj.filters
@@ -158,6 +158,15 @@
     <ClInclude Include="..\..\..\include\alfe\parse_tree_object.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\alfe\code.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\alfe\parser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\alfe\resolver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="..\..\..\include\alfe.natvis" />
