--- a/8088/cga/cgaart/cgaart.vcxproj
+++ b/8088/cga/cgaart/cgaart.vcxproj
@@ -95,6 +95,7 @@
     <ClInclude Include="..\..\..\include\alfe\bitmap_png.h" />
     <ClInclude Include="..\..\..\include\alfe\cga.h" />
     <ClInclude Include="..\..\..\include\alfe\character_source.h" />
+    <ClInclude Include="..\..\..\include\alfe\code.h" />
     <ClInclude Include="..\..\..\include\alfe\colour_space.h" />
     <ClInclude Include="..\..\..\include\alfe\complex.h" />
     <ClInclude Include="..\..\..\include\alfe\config_file.h" />
@@ -114,11 +115,13 @@
     <ClInclude Include="..\..\..\include\alfe\main.h" />
     <ClInclude Include="..\..\..\include\alfe\ntsc_decode.h" />
     <ClInclude Include="..\..\..\include\alfe\operator.h" />
+    <ClInclude Include="..\..\..\include\alfe\parser.h" />
     <ClInclude Include="..\..\..\include\alfe\parse_tree_object.h" />
     <ClInclude Include="..\..\..\include\alfe\rational.h" />
     <ClInclude Include="..\..\..\include\alfe\rational_functions.h" />
     <ClInclude Include="..\..\..\include\alfe\reference.h" />
     <ClInclude Include="..\..\..\include\alfe\image_filter.h" />
+    <ClInclude Include="..\..\..\include\alfe\resolver.h" />
     <ClInclude Include="..\..\..\include\alfe\rotors.h" />
     <ClInclude Include="..\..\..\include\alfe\scanlines.h" />
     <ClInclude Include="..\..\..\include\alfe\set.h" />
