Replace accessNumber 22, 23 and 26 with 25

--- a/8088/xtce/compare_candidate_lkg/compare_candidate_lkg.vcxproj
+++ b/8088/xtce/compare_candidate_lkg/compare_candidate_lkg.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -140,6 +140,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="compare_candidate_lkg.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\gentests.h" />
+    <ClInclude Include="..\xtce.h" />
+    <ClInclude Include="..\xtce_lkg.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
