--- a/8088/xtce/compare_hardware_lkg/compare_hardware_lkg.vcxproj
+++ b/8088/xtce/compare_hardware_lkg/compare_hardware_lkg.vcxproj
@@ -145,6 +145,9 @@
     <ClInclude Include="..\gentests.h" />
     <ClInclude Include="..\xtce_lkg.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\..\..\include\alfe.natvis" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
