--- a/8088/xtce/compare_hardware_lkg/compare_hardware_lkg.vcxproj.filters
+++ b/8088/xtce/compare_hardware_lkg/compare_hardware_lkg.vcxproj.filters
@@ -27,4 +27,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\..\..\include\alfe.natvis" />
+  </ItemGroup>
 </Project>
