--- a/8088/xtce/compare_hardware_lkg/compare_hardware_lkg.vcxproj
+++ b/8088/xtce/compare_hardware_lkg/compare_hardware_lkg.vcxproj
@@ -142,6 +142,8 @@
     <ClCompile Include="compare_hardware_lkg.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\include\alfe\space.h" />
+    <ClInclude Include="..\..\..\include\alfe\string.h" />
     <ClInclude Include="..\gentests.h" />
     <ClInclude Include="..\xtce_lkg.h" />
   </ItemGroup>
