--- a/8088/xtce/compare_hardware_lkg/compare_hardware_lkg.vcxproj.filters
+++ b/8088/xtce/compare_hardware_lkg/compare_hardware_lkg.vcxproj.filters
@@ -26,6 +26,12 @@
     <ClInclude Include="..\xtce_lkg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\alfe\space.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\alfe\string.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="..\..\..\include\alfe.natvis" />
