--- a/8088/xtce/compare_hardware_lkg/compare_hardware_lkg.vcxproj.filters
+++ b/8088/xtce/compare_hardware_lkg/compare_hardware_lkg.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClInclude Include="..\..\..\include\alfe\string.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\gentests2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="..\..\..\include\alfe.natvis" />
