--- a/8088/cga/cgaart/cgaart.vcxproj
+++ b/8088/cga/cgaart/cgaart.vcxproj
@@ -91,29 +91,36 @@
     <ClInclude Include="..\..\..\include\alfe\any.h" />
     <ClInclude Include="..\..\..\include\alfe\array.h" />
     <ClInclude Include="..\..\..\include\alfe\array_functions.h" />
+    <ClInclude Include="..\..\..\include\alfe\assert.h" />
     <ClInclude Include="..\..\..\include\alfe\bitmap.h" />
     <ClInclude Include="..\..\..\include\alfe\bitmap_png.h" />
+    <ClInclude Include="..\..\..\include\alfe\boolean_functions.h" />
     <ClInclude Include="..\..\..\include\alfe\cga.h" />
     <ClInclude Include="..\..\..\include\alfe\character_source.h" />
     <ClInclude Include="..\..\..\include\alfe\code.h" />
     <ClInclude Include="..\..\..\include\alfe\colour_space.h" />
     <ClInclude Include="..\..\..\include\alfe\complex.h" />
+    <ClInclude Include="..\..\..\include\alfe\concrete.h" />
+    <ClInclude Include="..\..\..\include\alfe\concrete_functions.h" />
     <ClInclude Include="..\..\..\include\alfe\config_file.h" />
     <ClInclude Include="..\..\..\include\alfe\double_functions.h" />
     <ClInclude Include="..\..\..\include\alfe\exception.h" />
     <ClInclude Include="..\..\..\include\alfe\expression.h" />
     <ClInclude Include="..\..\..\include\alfe\fft.h" />
     <ClInclude Include="..\..\..\include\alfe\file.h" />
+    <ClInclude Include="..\..\..\include\alfe\flattener.h" />
     <ClInclude Include="..\..\..\include\alfe\function.h" />
     <ClInclude Include="..\..\..\include\alfe\handle.h" />
     <ClInclude Include="..\..\..\include\alfe\hash_table.h" />
     <ClInclude Include="..\..\..\include\alfe\identifier.h" />
     <ClInclude Include="..\..\..\include\alfe\integer_functions.h" />
     <ClInclude Include="..\..\..\include\alfe\integer_types.h" />
+    <ClInclude Include="..\..\..\include\alfe\kind.h" />
     <ClInclude Include="..\..\..\include\alfe\knob.h" />
     <ClInclude Include="..\..\..\include\alfe\linked_list.h" />
     <ClInclude Include="..\..\..\include\alfe\main.h" />
     <ClInclude Include="..\..\..\include\alfe\ntsc_decode.h" />
+    <ClInclude Include="..\..\..\include\alfe\nullary.h" />
     <ClInclude Include="..\..\..\include\alfe\operator.h" />
     <ClInclude Include="..\..\..\include\alfe\parser.h" />
     <ClInclude Include="..\..\..\include\alfe\parse_tree_object.h" />
@@ -128,6 +135,7 @@
     <ClInclude Include="..\..\..\include\alfe\space.h" />
     <ClInclude Include="..\..\..\include\alfe\statement.h" />
     <ClInclude Include="..\..\..\include\alfe\string.h" />
+    <ClInclude Include="..\..\..\include\alfe\string_functions.h" />
     <ClInclude Include="..\..\..\include\alfe\terminal6.h" />
     <ClInclude Include="..\..\..\include\alfe\thread.h" />
     <ClInclude Include="..\..\..\include\alfe\timer.h" />
